fix align-items contacts

--- a/src/assets/styles/blocks/_banner.scss
+++ b/src/assets/styles/blocks/_banner.scss
@@ -168,6 +168,7 @@
 
     @include media("max", "lg") {
       flex-direction: column;
+      align-items: flex-start;
       margin-top: 29px;
     }
   }
